# Golfprac

./: Procfile  db.sqlite3  manage.py  pyproject.toml
Golfprac/: settings.py  urls.py  wsgi.py
scorecard/: admin.py  forms.py  models.py  urls.py  views.py
scorecard/migrations/: 0001_initial.py  0002_auto_20191108_1425.py  0003_auto_20191118_1832.py
scorecard/static/css/: scorecard.css
scorecard/templates/scorecard/: base.html  scorecard_detail.html  scorecard_edit.html  scorecard_list.html
