[tool.poetry]
name = "poetry_golfprac"
version = "0.1.0"
description = ""
authors = ["Bolahaga Randrianarizafy <megafourre.games@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^2.2"
whitenoise = "^4.1"
django_mysql = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
